--- a/index.html
+++ b/index.html
@@ -20,74 +20,75 @@
     <div class="top-center">
       <img src="logostem.jpg" alt="STEMSupply Logo" class="logo" />
     </div>
-    <div class="top-right">
-      <a href="#">Sign In</a> or <a href="#">Create an Account</a>
+    <div class="top-right" id="userStatus">
+      <a href="signin.html">Sign In</a> or <a href="create-account.html">Create an Account</a>
     </div>
   </div>
-
+  
   <!-- Main Navigation Bar -->
   <nav class="main-nav">
     <ul class="nav-left">
       <li class="nav-item">
-        <span>Science</span>
+        <li class="nav-item" data-name="Science">
+        <a href="science.html">Science</a>
         <ul class="dropdown-menu">
           <li><a href="#">Microscopes</a></li>
           <li><a href="#">Chemistry Kits</a></li>
           <li><a href="#">Physics Tools</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>Technology</span>
+        <li class="nav-item" data-name="Technology">
+        <a href="technology.html">Technology</a>
         <ul class="dropdown-menu">
           <li><a href="#">Coding Robots</a></li>
           <li><a href="#">Circuits</a></li>
           <li><a href="#">3D Printers</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>Engineering</span>
+        <li class="nav-item" data-name="Engineering">
+            <a href="engineering.html">Engineering</a>
         <ul class="dropdown-menu">
           <li><a href="#">Bridge Kits</a></li>
           <li><a href="#">Building Blocks</a></li>
         </ul>
-      </li>
-      <li class="nav-item">
-        <span>Mathematics</span>
+    </li>
+        <li class="nav-item" data-name="Mathematics">
+            <a href="mathematics.html">Mathematics</a>
         <ul class="dropdown-menu">
           <li><a href="#">Measurement Tools</a></li>
           <li><a href="#">Math Games</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>Makerspace</span>
+        <li class="nav-item" data-name="Makerspace">
+        <a href="makerspace.html">Makerspace</a>
         <ul class="dropdown-menu">
           <li><a href="#">Craft Kits</a></li>
           <li><a href="#">Electronics</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>Afterschool</span>
+        <li class="nav-item" data-name="Afterschool">
+        <a href="afterschool.html">Afterschool</a>
         <ul class="dropdown-menu">
           <li><a href="#">STEM Clubs</a></li>
           <li><a href="#">Programs</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>Collaborative Workspaces</span>
+        <li class="nav-item" data-name="Collaborative Workspace">
+            <a href="collaborative.html">Collaborative Workspace</a>
         <ul class="dropdown-menu">
           <li><a href="#">Desks</a></li>
           <li><a href="#">Boards</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>Outdoor Classroom</span>
+        <li class="nav-item" data-name="Outdoor Classroom">
+        <a href="outdoor.html">Outdoor Classroom</a>
         <ul class="dropdown-menu">
           <li><a href="#">Gardening</a></li>
           <li><a href="#">Exploration Kits</a></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <span>About Us</span>
+        <li class="nav-item" data-name="About Us">
+        <a href="about.html">About Us</a>
         <ul class="dropdown-menu">
           <li><a href="#">Our Story</a></li>
           <li><a href="#">Contact</a></li>
@@ -118,49 +119,49 @@
     <div class="category-card">
       <h3>Science</h3>
       <img src="scienceimage.png" alt="Science">
-      <a href="#">Explore Science</a>
+      <a href="science.html">Explore Science</a>
     </div>
   
     <div class="category-card">
       <h3>Technology</h3>
       <img src="technologyimage.png" alt="Technology">
-      <a href="#">Explore Technology</a>
+      <a href="technology.html">Explore Technology</a>
     </div>
   
     <div class="category-card">
       <h3>Engineering</h3>
       <img src="engineeringphoto.png" alt="Engineering">
-      <a href="#">Explore Engineering</a>
+      <a href="engineering.html">Explore Engineering</a>
     </div>
   
     <div class="category-card">
       <h3>Mathematics</h3>
       <img src="mathimage.png" alt="Mathematics">
-      <a href="#">Explore Mathematics</a>
+      <a href="mathematics.html">Explore Mathematics</a>
     </div>
   
     <div class="category-card">
       <h3>Makerspace</h3>
       <img src="makerspaceimage.png" alt="Makerspace">
-      <a href="#">Explore Makerspace</a>
+      <a href="makerspace.html">Explore Makerspace</a>
     </div>
   
     <div class="category-card">
       <h3>Afterschool</h3>
-      <img src="afterschool.png" alt="Afterschool">
-      <a href="#">Explore Afterschool</a>
+      <img src="afterschool.PNG" alt="Afterschool">
+      <a href="afterschool.html">Explore Afterschool</a>
     </div>
 
     <div class="category-card">
         <h3>Collaborative Workspace</h3>
         <img src="collaborativeimage.png" alt="Collaborative Workspace">
-        <a href="#">Explore Collaborative Workspace</a>
+        <a href="collaborative.html">Explore Collaborative Workspace</a>
     </div>
 
     <div class="category-card">
         <h3>Outdoor Classroom</h3>
         <img src="outdoorclass.png" alt="Outdoor Classroom">
-        <a href="#">Explore Outdoor Classroom</a>
+        <a href="outdoor.html">Explore Outdoor Classroom</a>
     </div>
 </section>  
   <!-- Sticky Footer -->
@@ -222,7 +223,6 @@
       <p>© 2025 STEMSupply. All rights reserved.</p>
     </div>
   </footer>
-  
-
+  <script src="main.js"></script>
 </body>
 </html>
