--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <li class="nav-item" data-name="Science">
         <a href="science.html">Science</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Microscopes</a></li>
+          <li><a href="earth-space.html">Earth and Space Science</a></li>
           <li><a href="#">Chemistry Kits</a></li>
           <li><a href="#">Physics Tools</a></li>
         </ul>
@@ -99,7 +99,9 @@
     <div class="nav-right">
       <input type="text" placeholder="Search entire store here..." class="search-input" />
       <i class="fas fa-search search-icon"></i>
-      <i class="fas fa-shopping-cart cart-icon"></i>
+      <a href="cart.html">
+        <i class="fas fa-shopping-cart cart-icon"></i>
+      </a>
     </div>
   </nav>
   <section class="about-section">
@@ -111,5 +113,64 @@
       </p>
     </div>
   </section>
+  <footer class="site-footer">
+    <div class="back-to-top">
+    </div>
+  
+    <div class="footer-content">
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h4>Get to Know Us</h4>
+          <ul>
+            <li><a href="#">About STEMSupply</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">News</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Work With Us</h4>
+          <ul>
+            <li><a href="#">Become a Partner</a></li>
+            <li><a href="#">Affiliate Program</a></li>
+            <li><a href="#">Promote STEM</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Resources</h4>
+          <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Shipping & Returns</a></li>
+            <li><a href="#">Accessibility</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Connect</h4>
+          <ul>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <img src="logostem.jpg" alt="STEMSupply Logo" class="footer-logo" />
+      <div class="footer-meta">
+        <select>
+          <option>English</option>
+        </select>
+        <select>
+          <option>USD - U.S. Dollar</option>
+          <option>AED - AED Dirhams</option>
+        </select>
+        <select>
+          <option>United States</option>
+        </select>
+      </div>
+      <p>© 2025 STEMSupply. All rights reserved.</p>
+    </div>
+  </footer>
   <script src="main.js"></script>
-  </body>
+</body>
+</html>
