--- a/earth-space.html
+++ b/earth-space.html
@@ -108,11 +108,14 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Science</h1>
+      <h1>Earth and Space Science</h1>
       <p>
-        Discover hands-on science tools and kits designed to inspire curiosity, critical thinking, and experimentation. From chemistry 
-        sets to biology models, our STEMSupply science resources support students in exploring the natural world through engaging, real-world 
-        learning experiences.
+        Earth and Life Sciences play a pivotal role in shaping our understanding of the world around us. 
+        At STEMSupply, we recognize the importance of these disciplines in driving advancements in sustainability, 
+        resource management, and environmental conservation. Our supply chain management system aims to bridge gaps 
+        in the procurement and distribution of vital resources, ensuring that innovations in Earth and Life Sciences are 
+        supported by efficient, transparent, and reliable processes. Through collaboration and innovation, we strive to 
+        empower the next generation of scientists and researchers in their quest for solutions to global challenges.
       </p>
     </div>
   </section>
