--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <li class="nav-item" data-name="Science">
         <a href="science.html">Science</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Microscopes</a></li>
-          <li><a href="#">Chemistry Kits</a></li>
-          <li><a href="#">Physics Tools</a></li>
+          <li><a href="earth-space.html">Earth and Space Science</a></li>
+          <li><a href="#">Electricity and Circuits</a></li>
+          <li><a href="#">Lab Equipment and Supplies</a></li>
+          <li><a href="#">Life Science</a></li>
+          <li><a href="#">Physical Science</a></li>
         </ul>
       </li>
         <li class="nav-item" data-name="Technology">
@@ -97,8 +99,8 @@
     </ul>
 
     <div class="nav-right">
-      <input type="text" placeholder="Search entire store here..." class="search-input" />
-      <i class="fas fa-search search-icon"></i>
+      <input type="text" id="searchInput" placeholder="Search entire store here..." class="search-input"/>
+      <i class="fas fa-search search-icon" onclick="performSearch()"></i>
       <i class="fas fa-shopping-cart cart-icon"></i>
     </div>
   </nav>
@@ -215,9 +217,10 @@
         </select>
         <select>
           <option>USD - U.S. Dollar</option>
+          <option>AED - AED Dirhams</option>
         </select>
         <select>
-          <option>United States</option>
+          <option>United Arab Emirates</option>
         </select>
       </div>
       <p>© 2025 STEMSupply. All rights reserved.</p>
