--- a/3dprinting.html
+++ b/3dprinting.html
@@ -116,14 +116,12 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Earth and Space Science</h1>
+      <h1>3D Printing</h1>
       <p>
-        Earth and Life Sciences play a pivotal role in shaping our understanding of the world around us. 
-        At STEMSupply, we recognize the importance of these disciplines in driving advancements in sustainability, 
-        resource management, and environmental conservation. Our supply chain management system aims to bridge gaps 
-        in the procurement and distribution of vital resources, ensuring that innovations in Earth and Life Sciences are 
-        supported by efficient, transparent, and reliable processes. Through collaboration and innovation, we strive to 
-        empower the next generation of scientists and researchers in their quest for solutions to global challenges.
+        3D printing is revolutionizing design, manufacturing, and prototyping across industries. At STEMSupply, 
+        we offer the latest 3D printing technology and materials, empowering creators, engineers, and educators to 
+        transform digital models into physical objects. Whether for rapid prototyping or production, our platform ensures 
+        that users have access to the best resources for their 3D printing needs.
       </p>
     </div>
   </section>
@@ -135,33 +133,33 @@
   
     <div class="category-circles">
       <div class="circle-item">
-        <a href="earth-space.html" class="circle-item">
-            <img src="earthandscience.png" alt="Earth & Space Science">
-            <p>Earth & Space Science</p>
+        <a href="3dprinting.html" class="circle-item">
+            <img src="3dprinting.png" alt="3D Printing">
+            <p>3D Printing</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="electricity.html" class="circle-item">
-            <img src="electricity.png" alt="Electricity & Circuits">
-            <p>Electricty & Circuits</p>
+        <a href="coding.html" class="circle-item">
+            <img src="coding.png" alt="Coding">
+            <p>Coding</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="labequipment.html" class="circle-item">
-            <img src="labequipment.png" alt="Lab Equipment">
-            <p>Lab Equipment & Supplies</p>
+        <a href="drones.html" class="circle-item">
+            <img src="drones.png" alt="Drones">
+            <p>Drones</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="lifescience.html" class="circle-item">
-            <img src="lifescience.png" alt="Life Science">
-            <p>Life Science</p>
+        <a href="media-production.html" class="circle-item">
+            <img src="media-production.png" alt="Media Production and VR">
+            <p>Media Production and Virtual Reality</p>
           </a>          
         </div>
       <div class="circle-item">
-        <a href="physical-science.html" class="circle-item">
-            <img src="physicalscience.png" alt="Physical Science">
-            <p>Physical Science</p>
+        <a href="robotics.html" class="circle-item">
+            <img src="robotics.png" alt="Robotics">
+            <p>Robotics</p>
           </a>
       </div>
       
