--- a/afterschool.html
+++ b/afterschool.html
@@ -29,35 +29,45 @@
     <ul class="nav-left">
       <li class="nav-item">
         <li class="nav-item" data-name="Science">
-        <a href="science.html">Science</a>
-        <ul class="dropdown-menu">
-          <li><a href="earth-space.html">Earth and Space Science</a></li>
-          <li><a href="#">Chemistry Kits</a></li>
-          <li><a href="#">Physics Tools</a></li>
-        </ul>
+          <a href="science.html">Science</a>
+          <ul class="dropdown-menu">
+            <li><a href="earth-space.html">Earth and Space Science</a></li>
+            <li><a href="electricity.html">Electricity and Circuits</a></li>
+            <li><a href="labequipment.html">Lab Equipment and Supplies</a></li>
+            <li><a href="lifescience.html">Life Science</a></li>
+            <li><a href="physicalscience.html">Physical Science</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Technology">
+          <a href="technology.html">Technology</a>
+          <ul class="dropdown-menu">
+            <li><a href="3dprinting.html">3D Printing</a></li>
+            <li><a href="coding.html">Coding</a></li>
+            <li><a href="drones.html">Drones</a></li>
+            <li><a href="media-production.html">Media Production and Virtual Reality</a></li>
+            <li><a href="robotics.html">Robotics</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Engineering">
+              <a href="engineering.html">Engineering</a>
+          <ul class="dropdown-menu">
+            <li><a href="buildingsupplies.html">Building Supplies</a></li>
+            <li><a href="hydraulics.html">Hydraulics</a></li>
+            <li><a href="renewable-eergy.html">Renewable Energy</a></li>
+            <li><a href="structures.html">Structures</a></li>
+            
+          </ul>
       </li>
-        <li class="nav-item" data-name="Technology">
-        <a href="technology.html">Technology</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Coding Robots</a></li>
-          <li><a href="#">Circuits</a></li>
-          <li><a href="#">3D Printers</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="Engineering">
-            <a href="engineering.html">Engineering</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Bridge Kits</a></li>
-          <li><a href="#">Building Blocks</a></li>
-        </ul>
-    </li>
-        <li class="nav-item" data-name="Mathematics">
-            <a href="mathematics.html">Mathematics</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Measurement Tools</a></li>
-          <li><a href="#">Math Games</a></li>
-        </ul>
-      </li>
+          <li class="nav-item" data-name="Mathematics">
+              <a href="mathematics.html">Mathematics</a>
+          <ul class="dropdown-menu">
+            <li><a href="geometry.html">Geometry</a></li>
+            <li><a href="mathgames.html">Math Games</a></li>
+            <li><a href="measurements.html">Measurements</a></li>
+            <li><a href="operations.html">Operations</a></li>
+            <li><a href="timeandmoney.html">Time And Money</a></li>
+          </ul>
+        </li>
         <li class="nav-item" data-name="Makerspace">
         <a href="makerspace.html">Makerspace</a>
         <ul class="dropdown-menu">
@@ -107,8 +117,10 @@
     <div class="about-container">
       <h1>Afterschool</h1>
       <p>
-        Support student growth beyond the classroom with engaging STEM-based afterschool programs.
-        STEMSupply offers kits and projects that spark creativity, teamwork, and problem-solving in fun, structured environments.
+        Afterschool activities are crucial for the holistic development of students, providing opportunities to explore new 
+        skills and interests. At STEMSupply, we offer a range of resources that support extracurricular programs, from STEM 
+        kits to art supplies. By ensuring easy access to quality materials, we help create enriching afterschool experiences 
+        that inspire creativity, critical thinking, and personal growth.
       </p>
     </div>
   
