--- a/drones.html
+++ b/drones.html
@@ -116,14 +116,12 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Earth and Space Science</h1>
+      <h1>Drones</h1>
       <p>
-        Earth and Life Sciences play a pivotal role in shaping our understanding of the world around us. 
-        At STEMSupply, we recognize the importance of these disciplines in driving advancements in sustainability, 
-        resource management, and environmental conservation. Our supply chain management system aims to bridge gaps 
-        in the procurement and distribution of vital resources, ensuring that innovations in Earth and Life Sciences are 
-        supported by efficient, transparent, and reliable processes. Through collaboration and innovation, we strive to 
-        empower the next generation of scientists and researchers in their quest for solutions to global challenges.
+        Drones are transforming industries such as agriculture, photography, and logistics. At STEMSupply, we offer a 
+        wide range of drone equipment, from hobbyist models to professional-grade systems. Our platform provides access 
+        to the tools and accessories needed for drone operation, maintenance, and innovation, enabling users to explore 
+        new possibilities in aerial technology.
       </p>
     </div>
   </section>
@@ -135,33 +133,33 @@
   
     <div class="category-circles">
       <div class="circle-item">
-        <a href="earth-space.html" class="circle-item">
-            <img src="earthandscience.png" alt="Earth & Space Science">
-            <p>Earth & Space Science</p>
+        <a href="3dprinting.html" class="circle-item">
+            <img src="3dprinting.png" alt="3D Printing">
+            <p>3D Printing</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="electricity.html" class="circle-item">
-            <img src="electricity.png" alt="Electricity & Circuits">
-            <p>Electricty & Circuits</p>
+        <a href="coding.html" class="circle-item">
+            <img src="coding.png" alt="Coding">
+            <p>Coding</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="labequipment.html" class="circle-item">
-            <img src="labequipment.png" alt="Lab Equipment">
-            <p>Lab Equipment & Supplies</p>
+        <a href="drones.html" class="circle-item">
+            <img src="drones.png" alt="Drones">
+            <p>Drones</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="lifescience.html" class="circle-item">
-            <img src="lifescience.png" alt="Life Science">
-            <p>Life Science</p>
+        <a href="media-production.html" class="circle-item">
+            <img src="media-production.png" alt="Media Production and VR">
+            <p>Media Production and Virtual Reality</p>
           </a>          
         </div>
       <div class="circle-item">
-        <a href="physical-science.html" class="circle-item">
-            <img src="physicalscience.png" alt="Physical Science">
-            <p>Physical Science</p>
+        <a href="robotics.html" class="circle-item">
+            <img src="robotics.png" alt="Robotics">
+            <p>Robotics</p>
           </a>
       </div>
       
@@ -185,70 +183,6 @@
           Engage students in earth science and astronomy with a bundle that is out of this world!
         </p>
         <button onclick="addToCart('Earth and Space Science Class Pack', 1149, 'earthandspaceitem1.PNG', '35-010','')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-  
-
-  <!-- Product 2 -->
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem2.PNG" alt="Human Activity and Environment Kit" />
-        <h4>Human Acitivity and Environment Kit</h4>
-        <p class="price">$149.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Active lessons demonstrate the impact of humans and the environment.
-        </p>
-        <button onclick="addToCart('Human Activity and Environment Kit', 149, 'earthandspaceitem2.PNG', '35-110', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-  
-
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem3.PNG" alt="Soil Analysis Kits" />
-        <h4>Soil Analysis Kits</h4>
-        <p class="price">$489.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Dig into 7 soil analysis experiments designed to expose scientific properties of loam, silt, clay, sand, and other types of soil!</p>
-        <button onclick="addToCart('Soil Analysis Kits', 489, 'earthandspaceitem3.PNG', '35-217', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-    <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem4.PNG" alt="SolarStudy Set" />
-        <h4>SolarStudy Set</h4>
-        <p class="price">$199.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Keep students active while exploring the position and motion of planets in our solar system!</p>        </p>
-        <button onclick="addToCart('SolarStudy Set', 199, 'earthandspaceitem4.PNG', '35-229', '')">
           <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
         </button>
       </div>
