--- a/buildingsupplies.html
+++ b/buildingsupplies.html
@@ -116,15 +116,12 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Earth and Space Science</h1>
+      <h1>Building Supplies</h1>
       <p>
-        Earth and Life Sciences play a pivotal role in shaping our understanding of the world around us. 
-        At STEMSupply, we recognize the importance of these disciplines in driving advancements in sustainability, 
-        resource management, and environmental conservation. Our supply chain management system aims to bridge gaps 
-        in the procurement and distribution of vital resources, ensuring that innovations in Earth and Life Sciences are 
-        supported by efficient, transparent, and reliable processes. Through collaboration and innovation, we strive to 
-        empower the next generation of scientists and researchers in their quest for solutions to global challenges.
-      </p>
+        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
+        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
+        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
+        have access to reliable, high-quality supplies that meet the demands of every project.
     </div>
   </section>
 
@@ -135,35 +132,29 @@
   
     <div class="category-circles">
       <div class="circle-item">
-        <a href="earth-space.html" class="circle-item">
-            <img src="earthandscience.png" alt="Earth & Space Science">
-            <p>Earth & Space Science</p>
+        <a href="buildingsupplies.html" class="circle-item">
+            <img src="buildingsupplies.png" alt="Building Supplies">
+            <p>Building Supplies</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="electricity.html" class="circle-item">
-            <img src="electricity.png" alt="Electricity & Circuits">
-            <p>Electricty & Circuits</p>
+        <a href="hydraulics.html" class="circle-item">
+            <img src="hydraulics.png" alt="Hydraulics">
+            <p>Hydraulics</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="labequipment.html" class="circle-item">
-            <img src="labequipment.png" alt="Lab Equipment">
-            <p>Lab Equipment & Supplies</p>
+        <a href="renewable-energy.html" class="circle-item">
+            <img src="renewable-energy.png" alt="Renewable Energy">
+            <p>Renewable Energy</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="lifescience.html" class="circle-item">
-            <img src="lifescience.png" alt="Life Science">
-            <p>Life Science</p>
+        <a href="structures.html" class="circle-item">
+            <img src="structures.png" alt="Strcutres">
+            <p>Structures</p>
           </a>          
         </div>
-      <div class="circle-item">
-        <a href="physical-science.html" class="circle-item">
-            <img src="physicalscience.png" alt="Physical Science">
-            <p>Physical Science</p>
-          </a>
-      </div>
       
     </div>
   </section>
@@ -214,87 +205,6 @@
     </div>
   </div>
   
-
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem3.PNG" alt="Soil Analysis Kits" />
-        <h4>Soil Analysis Kits</h4>
-        <p class="price">$489.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Dig into 7 soil analysis experiments designed to expose scientific properties of loam, silt, clay, sand, and other types of soil!</p>
-        <button onclick="addToCart('Soil Analysis Kits', 489, 'earthandspaceitem3.PNG', '35-217', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-    <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem4.PNG" alt="SolarStudy Set" />
-        <h4>SolarStudy Set</h4>
-        <p class="price">$199.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Keep students active while exploring the position and motion of planets in our solar system!</p>        </p>
-        <button onclick="addToCart('SolarStudy Set', 199, 'earthandspaceitem4.PNG', '35-229', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-  
-    <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem5.PNG" alt="STEM Earth Kit" />
-        <h4>Volcanic Eruptions Kit</h4>
-        <p class="price">$229.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Become a volcanologist creating your own volcano and witnessing an eruption right before your eyes!        </p>
-        <button onclick="addToCart('Volcanic Eruptions Kit', 229, 'earthandspaceitem5.PNG', '35-217', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem6.PNG" alt="Soil Analysis Refill Kit" />
-        <h4>Soil Analysis Refill Kit</h4>
-        <p class="price">$199.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Replenish a Soil Analysis Kit for further experimentation.</p>
-        <button onclick="addToCart('Soil Analysis Refill Kit', 199, 'earthandspaceitem6.PNG', '35-589', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
 
   
 </section>
