--- a/coding.html
+++ b/coding.html
@@ -116,14 +116,12 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Earth and Space Science</h1>
+      <h1>Coding</h1>
       <p>
-        Earth and Life Sciences play a pivotal role in shaping our understanding of the world around us. 
-        At STEMSupply, we recognize the importance of these disciplines in driving advancements in sustainability, 
-        resource management, and environmental conservation. Our supply chain management system aims to bridge gaps 
-        in the procurement and distribution of vital resources, ensuring that innovations in Earth and Life Sciences are 
-        supported by efficient, transparent, and reliable processes. Through collaboration and innovation, we strive to 
-        empower the next generation of scientists and researchers in their quest for solutions to global challenges.
+        Coding is the foundation of the digital world, driving the development of software, websites, and applications. 
+        At STEMSupply, we support the coding community by providing access to learning resources, development tools, 
+        and hardware components. Whether you're a beginner or an experienced programmer, our platform ensures that you have
+         the resources you need to create and innovate in the world of coding.
       </p>
     </div>
   </section>
@@ -135,33 +133,33 @@
   
     <div class="category-circles">
       <div class="circle-item">
-        <a href="earth-space.html" class="circle-item">
-            <img src="earthandscience.png" alt="Earth & Space Science">
-            <p>Earth & Space Science</p>
+        <a href="3dprinting.html" class="circle-item">
+            <img src="3dprinting.png" alt="3D Printing">
+            <p>3D Printing</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="electricity.html" class="circle-item">
-            <img src="electricity.png" alt="Electricity & Circuits">
-            <p>Electricty & Circuits</p>
+        <a href="coding.html" class="circle-item">
+            <img src="coding.png" alt="Coding">
+            <p>Coding</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="labequipment.html" class="circle-item">
-            <img src="labequipment.png" alt="Lab Equipment">
-            <p>Lab Equipment & Supplies</p>
+        <a href="drones.html" class="circle-item">
+            <img src="drones.png" alt="Drones">
+            <p>Drones</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="lifescience.html" class="circle-item">
-            <img src="lifescience.png" alt="Life Science">
-            <p>Life Science</p>
+        <a href="media-production.html" class="circle-item">
+            <img src="media-production.png" alt="Media Production and VR">
+            <p>Media Production and Virtual Reality</p>
           </a>          
         </div>
       <div class="circle-item">
-        <a href="physical-science.html" class="circle-item">
-            <img src="physicalscience.png" alt="Physical Science">
-            <p>Physical Science</p>
+        <a href="robotics.html" class="circle-item">
+            <img src="robotics.png" alt="Robotics">
+            <p>Robotics</p>
           </a>
       </div>
       
@@ -235,68 +233,7 @@
     </div>
   </div>
 
-    <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem4.PNG" alt="SolarStudy Set" />
-        <h4>SolarStudy Set</h4>
-        <p class="price">$199.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Keep students active while exploring the position and motion of planets in our solar system!</p>        </p>
-        <button onclick="addToCart('SolarStudy Set', 199, 'earthandspaceitem4.PNG', '35-229', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-  
-    <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem5.PNG" alt="STEM Earth Kit" />
-        <h4>Volcanic Eruptions Kit</h4>
-        <p class="price">$229.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Become a volcanologist creating your own volcano and witnessing an eruption right before your eyes!        </p>
-        <button onclick="addToCart('Volcanic Eruptions Kit', 229, 'earthandspaceitem5.PNG', '35-217', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem6.PNG" alt="Soil Analysis Refill Kit" />
-        <h4>Soil Analysis Refill Kit</h4>
-        <p class="price">$199.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Replenish a Soil Analysis Kit for further experimentation.</p>
-        <button onclick="addToCart('Soil Analysis Refill Kit', 199, 'earthandspaceitem6.PNG', '35-589', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-
-  
+   
 </section>
 </div>
 <footer class="site-footer">
