--- a/engineering.html
+++ b/engineering.html
@@ -30,37 +30,45 @@
     <ul class="nav-left">
       <li class="nav-item">
         <li class="nav-item" data-name="Science">
-        <a href="science.html">Science</a>
-        <ul class="dropdown-menu">
-          <li><a href="earth-space.html">Earth and Space Science</a></li>
-          <li><a href="#">Electricity and Circuits</a></li>
-          <li><a href="#">Lab Equipment and Supplies</a></li>
-          <li><a href="#">Life Science</a></li>
-          <li><a href="#">Physical Science</a></li>
-        </ul>
+          <a href="science.html">Science</a>
+          <ul class="dropdown-menu">
+            <li><a href="earth-space.html">Earth and Space Science</a></li>
+            <li><a href="electricity.html">Electricity and Circuits</a></li>
+            <li><a href="labequipment.html">Lab Equipment and Supplies</a></li>
+            <li><a href="lifescience.html">Life Science</a></li>
+            <li><a href="physicalscience.html">Physical Science</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Technology">
+          <a href="technology.html">Technology</a>
+          <ul class="dropdown-menu">
+            <li><a href="3dprinting.html">3D Printing</a></li>
+            <li><a href="coding.html">Coding</a></li>
+            <li><a href="drones.html">Drones</a></li>
+            <li><a href="media-production.html">Media Production and Virtual Reality</a></li>
+            <li><a href="robotics.html">Robotics</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Engineering">
+              <a href="engineering.html">Engineering</a>
+          <ul class="dropdown-menu">
+            <li><a href="buildingsupplies.html">Building Supplies</a></li>
+            <li><a href="hydraulics.html">Hydraulics</a></li>
+            <li><a href="renewable-eergy.html">Renewable Energy</a></li>
+            <li><a href="structures.html">Structures</a></li>
+            
+          </ul>
       </li>
-        <li class="nav-item" data-name="Technology">
-        <a href="technology.html">Technology</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Coding Robots</a></li>
-          <li><a href="#">Circuits</a></li>
-          <li><a href="#">3D Printers</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="Engineering">
-            <a href="engineering.html">Engineering</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Bridge Kits</a></li>
-          <li><a href="#">Building Blocks</a></li>
-        </ul>
-    </li>
-        <li class="nav-item" data-name="Mathematics">
-            <a href="mathematics.html">Mathematics</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Measurement Tools</a></li>
-          <li><a href="#">Math Games</a></li>
-        </ul>
-      </li>
+          <li class="nav-item" data-name="Mathematics">
+              <a href="mathematics.html">Mathematics</a>
+          <ul class="dropdown-menu">
+            <li><a href="geometry.html">Geometry</a></li>
+            <li><a href="mathgames.html">Math Games</a></li>
+            <li><a href="measurements.html">Measurements</a></li>
+            <li><a href="operations.html">Operations</a></li>
+            <li><a href="timeandmoney.html">Time And Money</a></li>
+          </ul>
+        </li>
         <li class="nav-item" data-name="Makerspace">
         <a href="makerspace.html">Makerspace</a>
         <ul class="dropdown-menu">
@@ -110,11 +118,46 @@
     <div class="about-container">
       <h1>Engineering</h1>
       <p>
-        Empower students to become tomorrow’s problem-solvers. STEMSupply engineering kits introduce structural design,
-         mechanics, and real-world engineering challenges in a classroom-ready format.
+        Engineering drives progress across countless industries, and at STEMSupply, we are committed to supporting engineers 
+        with the tools they need to create, test, and build. Our platform streamlines the procurement of engineering components, 
+        equipment, and materials, enabling engineers to push the boundaries of technology and design innovative solutions to 
+        global challenges.
       </p>
     </div>
   </section>
+  <section class="category-showcase">
+    <div class="category-header">
+      <h2>Shop by Category</h2>
+    </div>
+  
+    <div class="category-circles">
+      <div class="circle-item">
+        <a href="buildingsupplies.html" class="circle-item">
+            <img src="buildingsupplies.png" alt="Building Supplies">
+            <p>Building Supplies</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="hydraulics.html" class="circle-item">
+            <img src="hydraulics.png" alt="Hydraulics">
+            <p>Hydraulics</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="renewable-energy.html" class="circle-item">
+            <img src="renewable-energy.png" alt="Renewable Energy">
+            <p>Renewable Energy</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="structures.html" class="circle-item">
+            <img src="strcutres.png" alt="Structures">
+            <p>Structures</p>
+          </a>          
+        </div>
+        </div>
+        </section>
+      
   <footer class="site-footer">
     <div class="back-to-top">
     </div>
