--- a/index.html
+++ b/index.html
@@ -33,32 +33,40 @@
         <a href="science.html">Science</a>
         <ul class="dropdown-menu">
           <li><a href="earth-space.html">Earth and Space Science</a></li>
-          <li><a href="#">Electricity and Circuits</a></li>
-          <li><a href="#">Lab Equipment and Supplies</a></li>
-          <li><a href="#">Life Science</a></li>
-          <li><a href="#">Physical Science</a></li>
+          <li><a href="electricity.html">Electricity and Circuits</a></li>
+          <li><a href="labequipment.html">Lab Equipment and Supplies</a></li>
+          <li><a href="lifescience.html">Life Science</a></li>
+          <li><a href="physicalscience.html">Physical Science</a></li>
         </ul>
       </li>
         <li class="nav-item" data-name="Technology">
         <a href="technology.html">Technology</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Coding Robots</a></li>
-          <li><a href="#">Circuits</a></li>
-          <li><a href="#">3D Printers</a></li>
+          <li><a href="3dprinting.html">3D Printing</a></li>
+          <li><a href="coding.html">Coding</a></li>
+          <li><a href="drones.html">Drones</a></li>
+          <li><a href="media-production.html">Media Production and Virtual Reality</a></li>
+          <li><a href="robotics.html">Robotics</a></li>
         </ul>
       </li>
         <li class="nav-item" data-name="Engineering">
             <a href="engineering.html">Engineering</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Bridge Kits</a></li>
-          <li><a href="#">Building Blocks</a></li>
+          <li><a href="buildingsupplies.html">Building Supplies</a></li>
+          <li><a href="hydraulics.html">Hydraulics</a></li>
+          <li><a href="renewable-eergy.html">Renewable Energy</a></li>
+          <li><a href="structures.html">Structures</a></li>
+          
         </ul>
     </li>
         <li class="nav-item" data-name="Mathematics">
             <a href="mathematics.html">Mathematics</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Measurement Tools</a></li>
-          <li><a href="#">Math Games</a></li>
+          <li><a href="geometry.html">Geometry</a></li>
+          <li><a href="mathgames.html">Math Games</a></li>
+          <li><a href="measurements.html">Measurements</a></li>
+          <li><a href="operations.html">Operations</a></li>
+          <li><a href="timeandmoney.html">Time And Money</a></li>
         </ul>
       </li>
         <li class="nav-item" data-name="Makerspace">
