--- a/technology.html
+++ b/technology.html
@@ -30,37 +30,45 @@
     <ul class="nav-left">
       <li class="nav-item">
         <li class="nav-item" data-name="Science">
-        <a href="science.html">Science</a>
-        <ul class="dropdown-menu">
-          <li><a href="earth-space.html">Earth and Space Science</a></li>
-          <li><a href="#">Electricity and Circuits</a></li>
-          <li><a href="#">Lab Equipment and Supplies</a></li>
-          <li><a href="#">Life Science</a></li>
-          <li><a href="#">Physical Science</a></li>
-        </ul>
+          <a href="science.html">Science</a>
+          <ul class="dropdown-menu">
+            <li><a href="earth-space.html">Earth and Space Science</a></li>
+            <li><a href="electricity.html">Electricity and Circuits</a></li>
+            <li><a href="labequipment.html">Lab Equipment and Supplies</a></li>
+            <li><a href="lifescience.html">Life Science</a></li>
+            <li><a href="physicalscience.html">Physical Science</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Technology">
+          <a href="technology.html">Technology</a>
+          <ul class="dropdown-menu">
+            <li><a href="3dprinting.html">3D Printing</a></li>
+            <li><a href="coding.html">Coding</a></li>
+            <li><a href="drones.html">Drones</a></li>
+            <li><a href="media-production.html">Media Production and Virtual Reality</a></li>
+            <li><a href="robotics.html">Robotics</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Engineering">
+              <a href="engineering.html">Engineering</a>
+          <ul class="dropdown-menu">
+            <li><a href="buildingsupplies.html">Building Supplies</a></li>
+            <li><a href="hydraulics.html">Hydraulics</a></li>
+            <li><a href="renewable-eergy.html">Renewable Energy</a></li>
+            <li><a href="structures.html">Structures</a></li>
+            
+          </ul>
       </li>
-        <li class="nav-item" data-name="Technology">
-        <a href="technology.html">Technology</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Coding Robots</a></li>
-          <li><a href="#">Circuits</a></li>
-          <li><a href="#">3D Printers</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="Engineering">
-            <a href="engineering.html">Engineering</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Bridge Kits</a></li>
-          <li><a href="#">Building Blocks</a></li>
-        </ul>
-    </li>
-        <li class="nav-item" data-name="Mathematics">
-            <a href="mathematics.html">Mathematics</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Measurement Tools</a></li>
-          <li><a href="#">Math Games</a></li>
-        </ul>
-      </li>
+          <li class="nav-item" data-name="Mathematics">
+              <a href="mathematics.html">Mathematics</a>
+          <ul class="dropdown-menu">
+            <li><a href="geometry.html">Geometry</a></li>
+            <li><a href="mathgames.html">Math Games</a></li>
+            <li><a href="measurements.html">Measurements</a></li>
+            <li><a href="operations.html">Operations</a></li>
+            <li><a href="timeandmoney.html">Time And Money</a></li>
+          </ul>
+        </li>
         <li class="nav-item" data-name="Makerspace">
         <a href="makerspace.html">Makerspace</a>
         <ul class="dropdown-menu">
@@ -110,14 +118,58 @@
     <div class="about-container">
       <h1>Technology</h1>
       <p>
-        Prepare learners for a digital future. STEMSupply’s technology resources include coding kits, robotics, 
-        and programmable devices that build core skills in computer science and innovation.
+        Technology shapes every aspect of modern life, from communication to automation. At STEMSupply, we are dedicated to 
+        supporting the technology sector with access to high-quality components, devices, and tools. Our platform ensures 
+        that businesses, schools, and individuals have the resources they need to stay at the forefront of technological 
+        advancements and foster innovation in areas like software development, robotics, and electronics.
       </p>
     </div>
   </section>
+  <section class="category-showcase">
+    <div class="category-header">
+      <h2>Shop by Category</h2>
+    </div>
+  
+    <div class="category-circles">
+      <div class="circle-item">
+        <a href="3dprinting.html" class="circle-item">
+            <img src="3dprinting.png" alt="3D Printing">
+            <p>3D Printing</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="coding.html" class="circle-item">
+            <img src="coding.png" alt="Coding">
+            <p>Coding</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="drones.html" class="circle-item">
+            <img src="drones.png" alt="Drones">
+            <p>Drones</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="mediaproduction.html" class="circle-item">
+            <img src="mediaproduction.png" alt="Media Production and VR">
+            <p>Media Production and Virtual Reality</p>
+          </a>          
+        </div>
+      <div class="circle-item">
+        <a href="robotics.html" class="circle-item">
+            <img src="robotics.png" alt="Robotics">
+            <p>Robotics</p>
+          </a>
+      </div>
+      </div>
+      </section>
+      
   <footer class="site-footer">
     <div class="back-to-top">
     </div>
+
+      </div>
+    </section>
   
     <div class="footer-content">
       <div class="footer-columns">
